--- a/orchestra/Gemfile
+++ b/orchestra/Gemfile
@@ -40,3 +40,6 @@ gem 'spring',        group: :development
 
 gem 'mysql2'
 
+# for heroku
+gem 'rails_12factor', group: :production
+gem 'pg', group: :production
