--- a/config/database.yml
+++ b/config/database.yml
@@ -5,26 +5,23 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8
-  username: railsuser
-  password: railspassword
-  host: 54.164.221.124
-  port: 3306
+  adapter: sqlite3
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: rails_orchestra_dev
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rails_orchestra_test
+  database: db/test.sqlite3
 
+
+# Heroku replaces this shit
 production:
   <<: *default
-  database: rails_orchestra_prod
+  database: db/production.sqlite3
